Bug 325140 - GPG encryption of a new wallet fails with error code 0
Summary: GPG encryption of a new wallet fails with error code 0
Status: RESOLVED FIXED
Alias: None
Product: kwalletmanager
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Valentin Rusu
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-09-21 09:43 UTC by Luca Beltrame
Modified: 2013-09-21 15:13 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Luca Beltrame 2013-09-21 09:43:59 UTC
When trying to create a new wallet from kwalletmanager, after creation error messages pop up stating "Encryption error while attempting to save <wallet name>. Error code is 0."

Debug output states:

kwalletd(18158) KWallet::GpgPersistHandler::write: GpgME encryption error:  55

The wallet is created, but any operation in which it is involved prompts that error.

For the record, gpg-agent is running and working properly (signing emails in KMail, for example). 

Reproducible: Always

Steps to Reproduce:
1. Open kwalletmanager
2. Create a new wallet with GPG backend

Actual Results:  
An error dialog pops up stating "Encryption error while attempting to save <wallet name>. Error code is 0. Please fix your system configuration, then try again!"

Expected Results:  
The wallet is successfully created without errors.

This is from latest master.

gpg-agent --version
gpg-agent (GnuPG) 2.0.21
libgcrypt 1.5.3
Comment 1 Luca Beltrame 2013-09-21 09:45:21 UTC
I forgot to add: a passphrase is not even asked when I select the key I want to use.
Comment 2 Valentin Rusu 2013-09-21 15:13:07 UTC
Git commit 33a3a778593ce05fdfffeaf09b2648b08096ee36 by Valentin Rusu.
Committed on 21/09/2013 at 15:07.
Pushed by vrusu into branch 'master'.

Fix new wallet wizard logic bug

M  +3    -1    kwalletd/backend/backendpersisthandler.cpp
M  +2    -2    kwalletd/knewwalletdialog.cpp

http://commits.kde.org/kde-runtime/33a3a778593ce05fdfffeaf09b2648b08096ee36