Fix new wallet wizard logic bug

BUG: 325140